# axon

./: .env.example  .gitignore  01-use-cases.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  Untitled-1.ipynb  __init__.py  app.py  axon_sessions.db-shm  axon_sessions.db-wal  benchmark.py  cli.py  compressed_skill_test.txt  debug_hang.py  docker-compose.redis.yml  docker-compose.yml  dummy_openai_server.py  e2e_live_test.py  gcf_fastapi.py  pyproject.toml  requirements.txt  run_agent_integration.py  run_benchmarks.py  run_high_complexity_test.py  run_highest_complexity_test.py  run_multiturn_real_usecase.py  test_feature_flags.py  test_libsql.py  test_libsql2.py  test_libsql3.py  test_libsql_mem.py  test_live_api.py  test_payload_types.py  test_skill_compression.py  test_vector.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  test.yml
adapters/: mcp_bridge_adapter.py
api/middleware/: __init__.py  request_id.py
api/routes/: 05-configuration.md  07-extensibility.md  08-api-reference.md  09-testing.md  __init__.py  admin_routes.py  agent_routes.py  batch_routes.py  core_routes.py  dashboard_routes.py  memory_routes.py  process_routes.py  proxy_routes.py  security_routes.py  v1_assistants_routes.py  v1_files_routes.py  v1_openai_routes.py  v1_swarm_routes.py
core/: 03-core-concepts.md  app_config.py  logging_config.py  settings.py
dashboard/: README.md  package-lock.json  package.json
dashboard/src/: App.jsx  index.css
dashboard/src/components/: FlintViewer.jsx
dashboard/src/pages/: AgenticAnalytics.jsx
deploy/kubernetes/: sidecar.yaml  standalone.yaml
docs/: 01-use-cases.md  03-core-concepts.md  api-reference.md  app.js  index.html  observability.md  production-deployment.md  styles.css
domain/: api_models.py  process_handlers.py
examples/: agent_mcp_charting.py  demo_usage.py  integration_guide.py  real_world_benchmark.py  run_multiturn_real_usecase.py  run_stateful_threads_test.py  session_benchmark.py  simulate_gemini.py  simulate_ollama.py  simulate_real_world.py  stateful_thread_example.py  strategy_benchmark.py
examples/real_world_agent/: agent.py  run_demo.sh
integrations/: langchain.py  llamaindex.py  patch.py
mcp/: README.md  claude_desktop_config.json
scratch/: bench.py  list_gemini.py  list_models.py  test_gemini.py  test_key.py  test_opt.py  test_opt_debug.py  test_opt_gen_sess.py  test_opt_graph.py  test_opt_multi.py  test_opt_schema.py
services/: agent_orchestrator.py  bridge_service.py  ci.yml  dom_pruner.py  event_logger.py  fact_extractor.py  intent_classifier.py  kv_cache.py  libsql_memory_store.py  llmlingua_compressor.py  memory_store.py  payload_cache.py  pii_redactor.py  plugin_registry.py  pricing.py  prompt_firewall.py  redis_memory_store.py  request_logger.py  schema_validator.py  security_policy.py  semantic_cache.py  smart_router.py  sqlite_memory_store.py  test_token_optimizer.py  text_pruner.py  token_optimizer.py  tokenizer_factory.py  tool_compressor.py  vector_store.py  vision_optimizer.py
services/agentic/: __init__.py  error_truncator.py  loop_detector.py  observation_window.py  parallel_deduplicator.py  pipeline.py  prefix_cacher.py  scratchpad_compressor.py  session_state.py  tool_schema_diff.py  whitespace_normalizer.py
tests/: conftest.py  e2e_complex_scenarios.py  eval_integration.py  eval_results.txt  real_world_e2e_test.py  real_world_gemini_caching_test.py  real_world_integration.py  test_admin_routes.py  test_agent_orchestrator.py  test_agentic_pruning.py  test_agentic_workflow.py  test_api_routes.py  test_assistants_api.py  test_bridge_service_edge_cases.py  test_dashboard_routes.py  test_domain_and_core.py  test_e2e_proxy.py  test_entropy_hallucination.py  test_event_logger.py  test_highest_complexity.py  test_intelligence.py  test_kv_cache.py  test_langchain_import.py  test_langchain_integration.py  test_litellm_gemini.py  test_llamaindex_integration.py  test_max_reduction.py  test_memory_stores.py  test_openai_routes_extra.py  test_payload_cache.py  test_pii_redactor.py  test_plugin_registry.py  test_pricing.py  test_prompt_firewall.py  test_proxy_and_openai.py  test_rag_files.py  test_raw_gemini.py  test_resilience_gateway.py  test_schema_validator.py  test_sdk_patch.py  (+15 more)
