[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "axon-bridge"
version = "0.3.0"
description = "Token-efficient middleware for LLM APIs — automatically picks the cheapest encoding (GCF, TOON, TRON) to reduce API costs by up to 70%."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
keywords = ["llm", "tokens", "compression", "openai", "anthropic", "middleware", "fastapi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "gcf-python>=2.1.0",
    "fastapi>=0.116.0",
    "uvicorn[standard]>=0.35.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0",
    "tiktoken>=0.7.0",
    "python-dotenv>=1.0.0",
    "slowapi>=0.1.9",
    "typer>=0.12.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
redis = ["redis>=5.0.0"]
claude = ["anthropic>=0.28.0"]
langchain = ["langchain-core>=0.2.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "httpx>=0.27.0",  # for TestClient
    "locust>=2.0.0",  # load testing
]

[project.scripts]
axon = "cli:app"

[project.urls]
Homepage = "https://github.com/your-org/axon-bridge"
Documentation = "https://axon-bridge.readthedocs.io"
Repository = "https://github.com/your-org/axon-bridge"
"Bug Tracker" = "https://github.com/your-org/axon-bridge/issues"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
target-version = "py310"
line-length = 100
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
