[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "axon-bridge"
version = "0.3.0"
description = "Token-efficient middleware for LLM APIs — automatically picks the cheapest encoding (Axon, TOON, TRON) to reduce API costs by up to 70%."
authors = [
    { name = "Chaitanya Sharma", email = "chaitanyasharmaa@example.com" }
]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["llm", "tokens", "compression", "openai", "anthropic", "middleware", "fastapi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "gcf-python>=2.1.0",
    "fastapi>=0.116.0",
    "uvicorn[standard]>=0.35.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0",
    "tiktoken>=0.7.0",
    "python-dotenv>=1.0.0",
    "slowapi>=0.1.9",
    "typer>=0.12.0",
    "pydantic>=2.0.0",
    "opentelemetry-api>=1.24.0",
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-instrumentation-fastapi>=0.45b0",
    "opentelemetry-exporter-prometheus>=0.45b0",
    "prometheus-client>=0.20.0",
    "beautifulsoup4>=4.12.0",
    "markdownify>=0.11.6",
    "rank_bm25>=0.2.2",
    "tenacity>=8.2.3",
]

[project.optional-dependencies]
redis = ["redis>=5.0.0"]
claude = ["anthropic>=0.28.0"]
langchain = ["langchain-core>=0.2.0"]
llamaindex = ["llama-index-core>=0.10.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "httpx>=0.27.0",  # for TestClient
    "locust>=2.0.0",  # load testing
]

[project.scripts]
axon = "cli:app"

[project.urls]
Homepage = "https://github.com/chaitanya-sharmaa/axon"
Documentation = "https://axon-bridge.readthedocs.io"
Repository = "https://github.com/chaitanya-sharmaa/axon"
"Bug Tracker" = "https://github.com/chaitanya-sharmaa/axon/issues"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
target-version = "py310"
line-length = 100
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
